fix(client): Aligns navbar items vertically

--- a/packages/client/assets/scss/modules/_section-header.scss
+++ b/packages/client/assets/scss/modules/_section-header.scss
@@ -3,6 +3,7 @@
   height: 300px;
   position: relative;
   z-index: 1;
+  background-size: cover;
 
   &:before {
     content: "";
